Links tables and forms addes

--- a/HTMLSandbox/05_links_images.html
+++ b/HTMLSandbox/05_links_images.html
@@ -18,7 +18,12 @@
   <!-- Internal links -->
   <p>
 <a href="/04_typography.html">Typography</a>
-
   </p>
+
+  <!-- Local image -->
+  <img src="/images/sample.jpg" alt="My image" width="200">
+
+  <!-- Remote image -->
+  <img src="https://unsplash.com/photos/b5hZ0KFoLB0/download?ixid=MnwxMjA3fDB8MXxhbGx8fHx8fHx8fHwxNjUyNDUwNzQy&force=true&w=640" alt="My image 2">
 </body>
 </html>
