--- a/HTMLSandbox/07_forms_input.html
+++ b/HTMLSandbox/07_forms_input.html
@@ -8,18 +8,27 @@
 </head>
 <body>
   <form action="process.php">
+    
+    
+    <!-- Text -->
     <div>
       <label for="name">Name</label><br>
       <input type="text" id="name" name="namet">
     </div>
+
+    <!-- Email -->
     <div>
       <label for="email">Email</label><br>
       <input type="email" name="email" id="email" placeholder="Enter an email">
     </div>
+
+    <!-- Text box -->
     <div>
       <label for="message">Message</label><br>
       <textarea name="message" id="message" cols="50" rows="5"></textarea>
     </div>
+
+    <!-- Select -->
     <div>
       <label for="sex">Sex</label><br>
       <select name="sex" id="sex">
@@ -28,26 +37,33 @@
         <option value="other">other</option>
       </select>
     </div>
+    <!-- Number -->
     <div>
       <label for="age">Age</label><br>
       <input type="number" name="age" id="age">
     </div>
+    <!-- Date -->
     <div>
       <label for="birthdate">birthdate</label><br>
       <input type="date" name="birthdate" id="birthdate">
     </div> 
+    <!-- Radiobutton -->
     <div>
       <label for="membership">Membership</label><br>
       <input type="radio" name="membership" value="simple" id="membership"> Simple
       <input type="radio" name="membership" value="standard" id="membership" checked> Standard
       <input type="radio" name="membership" value="super" id="membership"> Super
     </div>
+    <!-- checkbox -->
     <div>
       <label for="membership">I Like...</label><br>
       <input type="checkbox" name="likes" value="Bike" id="likes"> Bike
       <input type="checkbox" name="likes" value="Car" id="likes" > Car
       <input type="checkbox" name="likes" value="Boat" id="likes"> Boat
     </div>
+    <!-- buttons -->
+    <input type="submit" value="Reset">
+    <!-- <button type="submit">Submit</button> -->
   </form>
 </body>
 </html>
