--- a/hote_website/index.html
+++ b/hote_website/index.html
@@ -36,7 +36,7 @@
   <section id="home-info" class="bg-dark">
     <div class="info-img"></div>
     <div class="info-content">
-      <h2><span class="text-primery">The History</span> Of Our Hotel</h2>
+      <h2><span class="text-primary">The History</span> Of Our Hotel</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum placeat modi odit animi explicabo porro in, est enim, omnis unde nemo itaque dignissimos nisi minima velit accusamus fugit. Eveniet nihil fugiat commodi harum distinctio ratione, molestiae impedit perspiciatis architecto animi.</p>
       <a href="about.html" class="btn btn-light">Read More</a>
     </div>
