--- a/hote_website/index.html
+++ b/hote_website/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="descpition" content="Welcome to the most extraordinery hotel in Boston Massachusetts">
   <meta name="keywords" contet="hotel, boston hotel, new endland hotel">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+  <!-- <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css"> -->
   <link rel="stylesheet" href="css/style.css">
   <title>Hotel BT | Welcome</title>
 </head>
@@ -41,6 +43,30 @@
       <a href="about.html" class="btn btn-light">Read More</a>
     </div>
   </section>
+
+  <secttion id="features">
+    <div class="box bg-light">
+      <i class="fas fa-hotel fa-3x"></i>
+      <h3>Great Location</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, saepe!</p>
+    </div>
+    <div class="box bg-primary">
+      <i class="fas fa-utensils fa-3x"></i>
+      <h3>Free Meals</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, saepe!</p>
+    </div>
+    <div class="box bg-light">
+      <i class="fas fa-dumbbell fa-3x"></i>
+      <h3>Fitness Room</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, saepe!</p>
+    </div>
+  </secttion>
+  
+  <div class="clr"></div>
+
+  <footer id="main-footer">
+    <p>Hotel BT &copy; 2022, All right reserverd</p>
+  </footer>
 
 </body>
 </html>
