hotel about 2 part

--- a/hote_website/about.html
+++ b/hote_website/about.html
@@ -9,36 +9,37 @@
   <link rel="stylesheet" href="css/style.css">
   <title>Hotel BT | About</title>
 </head>
-<body>
-  <header>
-    <nav id="navbar">
-      <div class="containter">
-        <h1 class="logo"><a href="index.html">HBT</h1>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a class="current" href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>        
+  <body>
+    <header>
+      <nav id="navbar">
+        <div class="containter">
+          <h1 class="logo"><a href="index.html">HBT</a></h1>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a class="current" href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>        
+        </div>
+      </nav>
+    </header>
+
+  <!-- info -->
+    <section id="about-info" class="bg-light py-3">
+      <div class="container">
+        <div class="info-left">
+          <h1><span class="text-primary">About</span> Hotel BT</h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae saepe corrupti quasi aperiam temporibus fuga tenetur quos laudantium. Expedita corrupti ut sapiente tempore inventore saepe ipsum. Cumque nemo provident ea.</p>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt voluptates reiciendis quas atque nemo eligendi minima repellendus cum vitae beatae!</p>
+        </div>
+        <div class="info-right">
+          <img src="./img/photo-2.jpg" alt="hotel">
+        </div>
       </div>
-    </nav>
-  </header>
+    </section>
 
-<!-- info -->
-<section>
-  <div class="container">
-    <div class="info-left">
-      <h1><span class="text-primary">About</span> Hotel BT</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae saepe corrupti quasi aperiam temporibus fuga tenetur quos laudantium. Expedita corrupti ut sapiente tempore inventore saepe ipsum. Cumque nemo provident ea.</p>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt voluptates reiciendis quas atque nemo eligendi minima repellendus cum vitae beatae!</p>
-    </div>
-    <div class="info-right">
+    <footer id="main-footer">
+        <p>Hotel BT &copy; 2022, All right reserverd</p>
+    </footer>
 
-    </div>
-  </div>
-</section>
-  <footer id="main-footer">
-    <p>Hotel BT &copy; 2022, All right reserverd</p>
-  </footer>
-
-</body>
+  </body>
 </html>
