--- a/hote_website/about.html
+++ b/hote_website/about.html
@@ -27,7 +27,7 @@
     <section id="about-info" class="bg-light py-3">
       <div class="container">
         <div class="info-left">
-          <h1><span class="text-primary">About</span> Hotel BT</h1>
+          <h1 class="l-heading"><span class="text-primary">About</span> Hotel BT</h1>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae saepe corrupti quasi aperiam temporibus fuga tenetur quos laudantium. Expedita corrupti ut sapiente tempore inventore saepe ipsum. Cumque nemo provident ea.</p>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt voluptates reiciendis quas atque nemo eligendi minima repellendus cum vitae beatae!</p>
         </div>
@@ -36,7 +36,24 @@
         </div>
       </div>
     </section>
+<!-- CLEAR!!! BARDZO WAZNY!!!  -->
+    <div class="clr"></div>
 
+    <section id="testimonials" class="py-3">
+      <div class="container">
+        <h2 class="l-heading"> What Our Guests Say</h2>
+        <div class="testimonial bg-primary">
+          <img src="./img/person-1.jpg" alt="Samatha">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi voluptas recusandae facilis dolore libero? Pariatur reprehenderit repudiandae alias aut! In pariatur similique enim suscipit exercitationem. Sint nesciunt ad placeat minus, vitae velit? Minima excepturi nam amet dignissimos qui vitae natus?</p>
+        </div>
+
+        <div class="testimonial bg-primary">
+          <img src="./img/person-2.jpg" alt="Jen">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi voluptas recusandae facilis dolore libero? Pariatur reprehenderit repudiandae alias aut! In pariatur similique enim suscipit exercitationem. Sint nesciunt ad placeat minus, vitae velit? Minima excepturi nam amet dignissimos qui vitae natus?</p>
+        </div>
+      </div>
+    </section>
+    
     <footer id="main-footer">
         <p>Hotel BT &copy; 2022, All right reserverd</p>
     </footer>
