--- a/hote_website/contact.html
+++ b/hote_website/contact.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="descpition" content="Welcome to the most extraordinery hotel in Boston Massachusetts">
   <meta name="keywords" contet="hotel, boston hotel, new endland hotel">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
   <title>Hotel BT | Contact</title>
 </head>
@@ -21,9 +22,49 @@
         </ul>        
       </div>
     </nav>
-<!-- Showcase -->
-
   </header>
+
+  <secton id="contact-form" class="py-3">
+    <div class="containter">
+      <h1 class="l-heading"><span class="text-primary">Contact</span> Us</h1>
+      <p>Please fill out the form below to contact us</p>
+      <form action="process.php">
+        <div class="form-group">
+          <label for="name">Name</label>
+          <input type="text" name="name" id="name">
+        </div>
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input type="email" name="email" id="email">
+        </div>
+        <div class="form-group">
+          <label for="message">Message</label>
+          <textarea name="message" id="message"></textarea>
+        </div>
+        <button type="submit" class="btn">Submit</button>
+      </form>
+    </div>
+  </secton>
+
+  <section id="contact-info" class="bg-dark">
+    <div class="container">
+      <div class="box">
+        <i class="fas fa-hotel fa-3x"></i>
+        <h3>Location</h3>
+        <p>50 Main st, Boston MA</p>
+      </div>
+      <div class="box">
+        <i class="fas fa-phone fa-3x"></i>
+        <h3>Phone Number</h3>
+        <p>(679) 555-789-123</p>
+      </div>
+      <div class="box">
+        <i class="fas fa-envelope fa-3x"></i>
+        <h3>Email Adress</h3>
+        <p>frontdesk@hotelbt.co</p>
+      </div>
+    </div>
+  </section>
 
   <footer id="main-footer">
     <p>Hotel BT &copy; 2022, All right reserverd</p>
