--- a/hote_website/about.html
+++ b/hote_website/about.html
@@ -7,6 +7,7 @@
   <meta name="descpition" content="Welcome to the most extraordinery hotel in Boston Massachusetts">
   <meta name="keywords" contet="hotel, boston hotel, new endland hotel">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/mobile.css">
   <title>Hotel BT | About</title>
 </head>
   <body>
