Blog and cases section addes in homepage

--- a/EdgeLedger/index.html
+++ b/EdgeLedger/index.html
@@ -31,7 +31,109 @@
       <p>We provie world class financial assistance</p>
       <a href="#about" class="btn"><i class="fas fa-chevron-right"></i>Read More</a>
     </div>
-
   </header>
+  <main>
+    <!-- About: Icons -->
+    <section id="about" class="icons bg-light">
+      <div class="flex-items">
+        <div>
+          <i class="fas fa-university fa-2x"></i>
+          <div>
+            <h3>Investment Banking</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, mollitia!</p>
+          </div>
+        </div>
+        <div>
+          <i class="fas fa-book-reader fa-2x"></i>
+          <div>
+            <h3>Porfolio Manager</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, mollitia!</p>
+          </div>
+        </div>
+        <div>
+          <i class="fas fa-pencil-alt fa-2x"></i>
+          <div>
+            <h3>Tax & Custodial</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, mollitia!</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- About: Solutions -->
+    <section class="solutions flex-columns">
+      <div class="row">
+        <div class="column">
+          <div class="column-1">
+            <img src="image_resources/home/people.jpg" alt="">
+          </div>
+        </div>
+        <div class="column">
+          <div class="column-2 bg-primary">
+            <h4>What are you looking for</h4>
+            <h2>We provide bespoke solutions</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae voluptas alias, libero laboriosam voluptatum aliquid debitis totam? Eos laboriosam tempore, nisi suscipit ipsam obcaecati officiis perspiciatis odit, impedit inventore sint.</p>
+            <a href="" class="btn btn-outline">
+              <i class="fas fa-chevron"></i> 
+              Read more
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Cases -->
+    <section id="cases" class="cases flex-grid section-padding">
+      <header class="section-header">
+        <h4>This is what we do</h4>
+        <h2>Business Cases</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, vitae?</p>        
+      </header>
+      <div class="row">
+        <div class="column">
+          <img src="image_resources/cases/cases1.jpg" alt="">
+          <img src="image_resources/cases/cases2.jpg" alt="">
+        </div>
+        <div class="column">
+          <img src="image_resources/cases/cases3.jpg" alt="">
+          <img src="image_resources/cases/cases4.jpg" alt="">
+        </div>
+        <div class="column">
+          <img src="image_resources/cases/cases5.jpg" alt="">
+          <img src="image_resources/cases/cases6.jpg" alt="">
+        </div>
+        <div class="column">
+          <img src="image_resources/cases/cases7.jpg" alt="">
+          <img src="image_resources/cases/cases8.jpg" alt="">
+        </div>
+      </div>
+    </section>
+
+    <!-- Blog -->
+    <section id="blog" class="blog flex-columns flex-reverse">
+      <div class="row">
+        <div class="column">
+          <div class="column-1">
+            <img src="image_resources/home/blog.jpg" alt="">
+          </div>
+        </div>
+        <div class="column">
+          <div class="column-2 bg-secondary">
+            <h4>April 16 2020</h4>
+            <h2>Blog Post One</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae voluptas alias, libero laboriosam voluptatum aliquid debitis totam? Eos laboriosam tempore, nisi suscipit ipsam obcaecati officiis perspiciatis odit, impedit inventore sint.</p>
+            <a href="" class="btn btn-outline">
+              <i class="fas fa-chevron"></i> 
+              Read Our Blog
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    
+
+
+  </main>
 </body>
 </html>
