--- a/EdgeLedger/index.html
+++ b/EdgeLedger/index.html
@@ -73,7 +73,7 @@
             <h4>What are you looking for</h4>
             <h2>We provide bespoke solutions</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae voluptas alias, libero laboriosam voluptatum aliquid debitis totam? Eos laboriosam tempore, nisi suscipit ipsam obcaecati officiis perspiciatis odit, impedit inventore sint.</p>
-            <a href="" class="btn btn-outline">
+            <a href="#" class="btn btn-outline">
               <i class="fas fa-chevron"></i> 
               Read more
             </a>
@@ -158,7 +158,7 @@
     </section>
 
     <!-- Contact -->
-    <section id="contact class="contact flex-columns">
+    <section id="contact" class="contact flex-columns">
       <div class="row">
         <div class="column">
           <div class="column-1">
