--- a/EdgeLedger/index.html
+++ b/EdgeLedger/index.html
@@ -122,7 +122,7 @@
             <h4>April 16 2020</h4>
             <h2>Blog Post One</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae voluptas alias, libero laboriosam voluptatum aliquid debitis totam? Eos laboriosam tempore, nisi suscipit ipsam obcaecati officiis perspiciatis odit, impedit inventore sint.</p>
-            <a href="" class="btn btn-outline">
+            <a href="blog.html" class="btn btn-outline">
               <i class="fas fa-chevron"></i> 
               Read Our Blog
             </a>
@@ -202,6 +202,30 @@
     </div>
     <p>Copyright &copy; 2020 - EdgeLedger</p>
   </footer>
+
+
+<!-- java script -->
+
+  <script>
+    const navbar = document.getElementById('navbar');
+    let scrolled = false;
+
+    window.onscroll = function(){
+      if(window.pageYOffset > 100){
+        navbar.classList.remove('top');
+        if(!scrolled){
+          navbar.style.transform = 'translateY(-70px)';
+        }
+        setTimeout(function(){    
+          navbar.style.transform = 'translateY(0)';      
+          scrolled = true;
+        }, 200);
+      }else{
+        navbar.classList.add('top');
+        scrolled = false;
+      }
+    }
+  </script>
 
 </body>
 </html>
