--- a/EdgeLedger/blog.html
+++ b/EdgeLedger/blog.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+    integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/utylities.css">
   <title>Read out blog</title>
 </head>
+
 <body id="home">
   <header class="hero blog">
-    <div id="navbar" class="navbar">
+    <div id="navbar" class="navbar top">
       <h1 class="logo">
         <span class="text-primary"><i class="fas fa-book-open"></i>
-        Edge</span>Ledger
+          Edge</span>Ledger
       </h1>
       <nav>
         <ul>
@@ -28,7 +32,7 @@
     </div>
     <div class="content">
       <h1>Blog</h1>
-    
+
     </div>
   </header>
   <main>
@@ -45,9 +49,11 @@
             <p class="meta">
               <i class="fas fa-user"></i> Posted by <strong>Jhon Doe</strong> | April 19 2020
             </p>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae voluptas alias, libero laboriosam voluptatum aliquid debitis totam? Eos laboriosam tempore, nisi suscipit ipsam obcaecati officiis perspiciatis odit, impedit inventore sint.</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae voluptas alias, libero laboriosam
+              voluptatum aliquid debitis totam? Eos laboriosam tempore, nisi suscipit ipsam obcaecati officiis
+              perspiciatis odit, impedit inventore sint.</p>
             <a href="post.html" class="btn btn-dark">
-              <i class="fas fa-chevron"></i> 
+              <i class="fas fa-chevron"></i>
               Read more
             </a>
           </div>
@@ -68,9 +74,11 @@
             <p class="meta">
               <i class="fas fa-user"></i> Posted by <strong>Jane Doe</strong> | April 21 2020
             </p>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae voluptas alias, libero laboriosam voluptatum aliquid debitis totam? Eos laboriosam tempore, nisi suscipit ipsam obcaecati officiis perspiciatis odit, impedit inventore sint.</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae voluptas alias, libero laboriosam
+              voluptatum aliquid debitis totam? Eos laboriosam tempore, nisi suscipit ipsam obcaecati officiis
+              perspiciatis odit, impedit inventore sint.</p>
             <a href="post.html" class="btn btn-light">
-              <i class="fas fa-chevron"></i> 
+              <i class="fas fa-chevron"></i>
               Read more
             </a>
           </div>
@@ -91,9 +99,11 @@
             <p class="meta">
               <i class="fas fa-user"></i> Posted by <strong>Jhon Doe</strong> | April 25 2020
             </p>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae voluptas alias, libero laboriosam voluptatum aliquid debitis totam? Eos laboriosam tempore, nisi suscipit ipsam obcaecati officiis perspiciatis odit, impedit inventore sint.</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae voluptas alias, libero laboriosam
+              voluptatum aliquid debitis totam? Eos laboriosam tempore, nisi suscipit ipsam obcaecati officiis
+              perspiciatis odit, impedit inventore sint.</p>
             <a href="post.html" class="btn btn-dark">
-              <i class="fas fa-chevron"></i> 
+              <i class="fas fa-chevron"></i>
               Read more
             </a>
           </div>
@@ -113,5 +123,27 @@
     <p>Copyright &copy; 2020 - EdgeLedger</p>
   </footer>
 
+  <script>
+    const navbar = document.getElementById('navbar');
+    let scrolled = false;
+
+    window.onscroll = function () {
+      if (window.pageYOffset > 100) {
+        navbar.classList.remove('top');
+        if (!scrolled) {
+          navbar.style.transform = 'translateY(-70px)';
+        }
+        setTimeout(function () {
+          navbar.style.transform = 'translateY(0)';
+          scrolled = true;
+        }, 200);
+      } else {
+        navbar.classList.add('top');
+        scrolled = false;
+      }
+    };
+  </script>
+
 </body>
+
 </html>
