--- a/EdgeLedger/index.html
+++ b/EdgeLedger/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+    integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/utylities.css">
   <title>Welcome To EdgeLedger</title>
 </head>
+
 <body id="home">
   <header class="hero">
     <div id="navbar" class="navbar">
       <h1 class="logo">
         <span class="text-primary"><i class="fas fa-book-open"></i>
-        Edge</span>Ledger
+          Edge</span>Ledger
       </h1>
       <nav>
         <ul>
@@ -72,9 +76,11 @@
           <div class="column-2 bg-primary">
             <h4>What are you looking for</h4>
             <h2>We provide bespoke solutions</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae voluptas alias, libero laboriosam voluptatum aliquid debitis totam? Eos laboriosam tempore, nisi suscipit ipsam obcaecati officiis perspiciatis odit, impedit inventore sint.</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae voluptas alias, libero laboriosam
+              voluptatum aliquid debitis totam? Eos laboriosam tempore, nisi suscipit ipsam obcaecati officiis
+              perspiciatis odit, impedit inventore sint.</p>
             <a href="#" class="btn btn-outline">
-              <i class="fas fa-chevron"></i> 
+              <i class="fas fa-chevron"></i>
               Read more
             </a>
           </div>
@@ -87,7 +93,7 @@
       <header class="section-header">
         <h4>This is what we do</h4>
         <h2>Business Cases</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, vitae?</p>        
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, vitae?</p>
       </header>
       <div class="row">
         <div class="column">
@@ -121,9 +127,11 @@
           <div class="column-2 bg-secondary">
             <h4>April 16 2020</h4>
             <h2>Blog Post One</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae voluptas alias, libero laboriosam voluptatum aliquid debitis totam? Eos laboriosam tempore, nisi suscipit ipsam obcaecati officiis perspiciatis odit, impedit inventore sint.</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae voluptas alias, libero laboriosam
+              voluptatum aliquid debitis totam? Eos laboriosam tempore, nisi suscipit ipsam obcaecati officiis
+              perspiciatis odit, impedit inventore sint.</p>
             <a href="blog.html" class="btn btn-outline">
-              <i class="fas fa-chevron"></i> 
+              <i class="fas fa-chevron"></i>
               Read Our Blog
             </a>
           </div>
@@ -136,7 +144,7 @@
       <header class="section-header">
         <h4>Who we are</h4>
         <h2>Our Professional team</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, vitae?</p>        
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, vitae?</p>
       </header>
       <div class="flex-items">
         <div>
@@ -171,21 +179,17 @@
             <form action="" class="callback-form">
               <div class="form-control">
                 <label for="name"></label>
-                  <input type="text" name="name" id="name" 
-                  placeholder="Enter name">
+                <input type="text" name="name" id="name" placeholder="Enter name">
               </div>
               <div class="form-control">
                 <label for="email"></label>
-                  <input type="email" name="email" id="email" 
-                  placeholder="Enter email">
+                <input type="email" name="email" id="email" placeholder="Enter email">
               </div>
               <div class="form-control">
                 <label for="phone"></label>
-                  <input type="phone" name="phone" id="phone" 
-                  placeholder="Enter phone">
+                <input type="phone" name="phone" id="phone" placeholder="Enter phone">
               </div>
-              <input type="submit" value="Send" id="submit"
-              class="btn">
+              <input type="submit" value="Send" id="submit" class="btn">
             </form>
           </div>
         </div>
@@ -203,29 +207,52 @@
     <p>Copyright &copy; 2020 - EdgeLedger</p>
   </footer>
 
+  <script src="https://code.jquery.com/jquery-3.6.1.min.js"
+    integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous">
+    </script>
 
-<!-- java script -->
+  <!-- java script -->
 
   <script>
     const navbar = document.getElementById('navbar');
     let scrolled = false;
 
-    window.onscroll = function(){
-      if(window.pageYOffset > 100){
+    window.onscroll = function () {
+      if (window.pageYOffset > 100) {
         navbar.classList.remove('top');
-        if(!scrolled){
+        if (!scrolled) {
           navbar.style.transform = 'translateY(-70px)';
         }
-        setTimeout(function(){    
-          navbar.style.transform = 'translateY(0)';      
+        setTimeout(function () {
+          navbar.style.transform = 'translateY(0)';
           scrolled = true;
         }, 200);
-      }else{
+      } else {
         navbar.classList.add('top');
         scrolled = false;
       }
-    }
+    };
+
+    // Smooth Scrolling
+    $('#navbar a, .btn').on('click', function (e) {
+      if (this.hash !== '') {
+        e.preventDefault();
+
+        const hash = this.hash;
+
+        $('html, body').animate(
+          {
+            scrollTop: $(hash).offset().top - 100,
+          },
+          800
+        );
+      }
+    });
+
   </script>
 
+
+
 </body>
+
 </html>
