--- a/EdgeLedger/index.html
+++ b/EdgeLedger/index.html
@@ -9,7 +9,7 @@
     integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/utylities.css">
+  <link rel="stylesheet" href="css/lightbox.min.css">
   <title>Welcome To EdgeLedger</title>
 </head>
 
@@ -97,7 +97,10 @@
       </header>
       <div class="row">
         <div class="column">
-          <img src="image_resources/cases/cases1.jpg" alt="">
+          <a href="image_resources/cases/cases1.jpg" data-lightbox="cases" data-title="lorem10 ">
+            <img src="image_resources/cases/cases1.jpg" alt="">
+          </a>
+
           <img src="image_resources/cases/cases2.jpg" alt="">
         </div>
         <div class="column">
@@ -210,6 +213,8 @@
   <script src="https://code.jquery.com/jquery-3.6.1.min.js"
     integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous">
     </script>
+
+  <script src="js/lightbox.min.js"></script>
 
   <!-- java script -->
 
