Before and after CSS

--- a/CSSSANDBOX2/02_nth_child.html
+++ b/CSSSANDBOX2/02_nth_child.html
@@ -37,7 +37,7 @@
       background: yellow;
     }
 
-    /* Every odd */
+    /* Every odd & even */
     li:nth-child(odd) {
       background: #ccc;
     }
