--- a/CSSSANDBOX2/03_before_after.html
+++ b/CSSSANDBOX2/03_before_after.html
@@ -22,6 +22,25 @@
       height: 100vh;
     }
 
+    header::before{
+      content:'';
+      background-image: url('https://source.unsplash.com/random/1600x900?sig=3')
+      no-repeat center center/cover;
+      opacity: 0.4;
+      position:absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+    }
+
+
+    header > h1{
+      font-size: 4rem;
+      margin: 1rem;
+    }
+
     .is-required::after {
       content: '*';
       color: red;
