--- a/CSSSANDBOX2/04_box_shadow.html
+++ b/CSSSANDBOX2/04_box_shadow.html
@@ -5,8 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Box Shadows</title>
+    <style>
+        .container{
+            display: flex;
+        }
+
+        .box {
+            padding: 1rem;
+            margin: 1rem;
+            background: coral;
+            color: #fff;
+        }
+    </style>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="box">
+            <h3>Heading</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum dolores impedit incidunt id fuga reprehenderit?</p>
+        </div>
+        <div class="box">
+            <h3>Heading</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum dolores impedit incidunt id fuga reprehenderit?</p>
+        </div>
+        <div class="box">
+            <h3>Heading</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum dolores impedit incidunt id fuga reprehenderit?</p>
+        </div>
+        <div class="box">
+            <h3>Heading</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum dolores impedit incidunt id fuga reprehenderit?</p>
+        </div>
+    </div>
 </body>
 </html>
