--- a/CSSSANDBOX2/04_box_shadow.html
+++ b/CSSSANDBOX2/04_box_shadow.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Box Shadows</title>
     <style>
-        .container{
+        .container {
             display: flex;
         }
 
@@ -15,27 +16,46 @@
             margin: 1rem;
             background: coral;
             color: #fff;
+
+            /* offset-x offset-y color */
+            box-shadow: 10px 10px teal;
+            /* offset-x offset-y bluer-radius color*/
+            box-shadow: 10px 10px 10px teal;
+            /* negative values */
+            box-shadow: -10px -10px 10px teal;
+            /* offset-x offset-y bluer-radius spread-radius color*/
+            box-shadow: 3px 3px 10px 1px rgba(0, 0, 0, 0.3);
+            /* inset offset-x offset-y color*/
+            box-shadow: inset 3px 3px teal;
+            /* Multiple shadows */
+            box-shadow: 3px 3px 10px teal, -3px -3px 10px olive;
         }
     </style>
 </head>
+
 <body>
     <div class="container">
         <div class="box">
             <h3>Heading</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum dolores impedit incidunt id fuga reprehenderit?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum dolores impedit incidunt id fuga
+                reprehenderit?</p>
         </div>
         <div class="box">
             <h3>Heading</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum dolores impedit incidunt id fuga reprehenderit?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum dolores impedit incidunt id fuga
+                reprehenderit?</p>
         </div>
         <div class="box">
             <h3>Heading</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum dolores impedit incidunt id fuga reprehenderit?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum dolores impedit incidunt id fuga
+                reprehenderit?</p>
         </div>
         <div class="box">
             <h3>Heading</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum dolores impedit incidunt id fuga reprehenderit?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum dolores impedit incidunt id fuga
+                reprehenderit?</p>
         </div>
     </div>
 </body>
+
 </html>
