--- a/CSSSANDBOX2/10_transform.html
+++ b/CSSSANDBOX2/10_transform.html
@@ -29,9 +29,10 @@
       /* transform: rotate(180deg);
       transform: skew(25deg);
       transform: scale(2); */
-      transform: translateY(-100px);
+      /* transform: translateY(-100px);
       transform: translateX(-100px);
-      transform: translate(100px, 100px);
+      transform: translate(100px, 100px); */
+      transform: translate3d(100px, 100px, 100px);
     }
   </style>
 </head>
