--- a/Miniprojects keyframes transitions etc/Knowlage resume CV/index.html
+++ b/Miniprojects keyframes transitions etc/Knowlage resume CV/index.html
@@ -5,11 +5,100 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
+  <link rel="stylesheet" href="style.css">
+  <title>Knowladge Timeline</title>
 </head>
 
 <body>
+  <header id="main-header">
+    <div class="container">
+      <h1><i class="fas fa-brain"></i>Knowlage Resume</h1>
+      <h3><i class="fas fa-user"></i> Brad Traversy</h3>
+    </div>
+  </header>
+  <seection id="timeline">
+    <ul>
+      <li>
+        <div>
+          <h3><i class="fas fas-chevron-right"></i>2007: HTML & CSS</h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore libero ipsum cum voluptates ullam
+            assumenda laborum soluta architecto similique est.</p>
+        </div>
+      </li>
+      <li>
+        <div>
+          <h3><i class="fas fas-chevron-right"></i>2008: JavaScrpit & JQuery</h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore libero ipsum cum voluptates ullam
+            assumenda laborum soluta architecto similique est.</p>
+        </div>
+      </li>
+      <li>
+        <div>
+          <h3><i class="fas fas-chevron-right"></i>2007: HTML & CSS</h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore libero ipsum cum voluptates ullam
+            assumenda laborum soluta architecto similique est.</p>
+        </div>
+      </li>
+      <li>
+        <div>
+          <h3><i class="fas fas-chevron-right"></i>2007: HTML & CSS</h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore libero ipsum cum voluptates ullam
+            assumenda laborum soluta architecto similique est.</p>
+        </div>
+      </li>
+      <li>
+        <div>
+          <h3><i class="fas fas-chevron-right"></i>2007: HTML & CSS</h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore libero ipsum cum voluptates ullam
+            assumenda laborum soluta architecto similique est.</p>
+        </div>
+      </li>
+      <li>
+        <div>
+          <h3><i class="fas fas-chevron-right"></i>2007: HTML & CSS</h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore libero ipsum cum voluptates ullam
+            assumenda laborum soluta architecto similique est.</p>
+        </div>
+      </li>
+      <li>
+        <div>
+          <h3><i class="fas fas-chevron-right"></i>2007: HTML & CSS</h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore libero ipsum cum voluptates ullam
+            assumenda laborum soluta architecto similique est.</p>
+        </div>
+      </li>
+      <li>
+        <div>
+          <h3><i class="fas fas-chevron-right"></i>2007: HTML & CSS</h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore libero ipsum cum voluptates ullam
+            assumenda laborum soluta architecto similique est.</p>
+        </div>
+      </li>
+      <li>
+        <div>
+          <h3><i class="fas fas-chevron-right"></i>2007: HTML & CSS</h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore libero ipsum cum voluptates ullam
+            assumenda laborum soluta architecto similique est.</p>
+        </div>
+      </li>
+      <li>
+        <div>
+          <h3><i class="fas fas-chevron-right"></i>2007: HTML & CSS</h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore libero ipsum cum voluptates ullam
+            assumenda laborum soluta architecto similique est.</p>
+        </div>
+      </li>
+      <li>
+        <div>
+          <h3><i class="fas fas-chevron-right"></i>2007: HTML & CSS</h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore libero ipsum cum voluptates ullam
+            assumenda laborum soluta architecto similique est.</p>
+        </div>
+      </li>
 
+    </ul>
+  </seection>
 </body>
 
 </html>
