--- a/Miniprojects keyframes transitions etc/Knowlage resume CV/index.html
+++ b/Miniprojects keyframes transitions etc/Knowlage resume CV/index.html
@@ -35,56 +35,56 @@
       </li>
       <li>
         <div>
-          <h3><i class="fas fas-chevron-right"></i>2007: HTML & CSS</h3>
+          <h3><i class="fas fas-chevron-right"></i>2009: PHP & Wordpress</h3>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore libero ipsum cum voluptates ullam
             assumenda laborum soluta architecto similique est.</p>
         </div>
       </li>
       <li>
         <div>
-          <h3><i class="fas fas-chevron-right"></i>2007: HTML & CSS</h3>
+          <h3><i class="fas fas-chevron-right"></i>2011: Ruby on Rails</h3>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore libero ipsum cum voluptates ullam
             assumenda laborum soluta architecto similique est.</p>
         </div>
       </li>
       <li>
         <div>
-          <h3><i class="fas fas-chevron-right"></i>2007: HTML & CSS</h3>
+          <h3><i class="fas fas-chevron-right"></i>2012:Python</h3>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore libero ipsum cum voluptates ullam
             assumenda laborum soluta architecto similique est.</p>
         </div>
       </li>
       <li>
         <div>
-          <h3><i class="fas fas-chevron-right"></i>2007: HTML & CSS</h3>
+          <h3><i class="fas fas-chevron-right"></i>2013: Node.js & React</h3>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore libero ipsum cum voluptates ullam
             assumenda laborum soluta architecto similique est.</p>
         </div>
       </li>
       <li>
         <div>
-          <h3><i class="fas fas-chevron-right"></i>2007: HTML & CSS</h3>
+          <h3><i class="fas fas-chevron-right"></i>2015: Angular & React Native</h3>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore libero ipsum cum voluptates ullam
             assumenda laborum soluta architecto similique est.</p>
         </div>
       </li>
       <li>
         <div>
-          <h3><i class="fas fas-chevron-right"></i>2007: HTML & CSS</h3>
+          <h3><i class="fas fas-chevron-right"></i>2016: Vue.js</h3>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore libero ipsum cum voluptates ullam
             assumenda laborum soluta architecto similique est.</p>
         </div>
       </li>
       <li>
         <div>
-          <h3><i class="fas fas-chevron-right"></i>2007: HTML & CSS</h3>
+          <h3><i class="fas fas-chevron-right"></i>2017: GraphQI & Apollo</h3>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore libero ipsum cum voluptates ullam
             assumenda laborum soluta architecto similique est.</p>
         </div>
       </li>
       <li>
         <div>
-          <h3><i class="fas fas-chevron-right"></i>2007: HTML & CSS</h3>
+          <h3><i class="fas fas-chevron-right"></i>2018: Machiene Learning</h3>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore libero ipsum cum voluptates ullam
             assumenda laborum soluta architecto similique est.</p>
         </div>
