--- a/News_Grid/index.html
+++ b/News_Grid/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
     integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
-
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Staatliches&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="CSS/style.css">
   <link rel="stylesheet" media="screen nad (max-width 768px)" href="CSS/mobile.css">
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
@@ -31,6 +31,103 @@
       </ul>
     </div>
   </nav>
+
+  <!-- Showcase -->
+
+  <header id="showcase">
+    <div class="container">
+      <div class="showcase-container">
+        <div class="showcase-content">
+          <div class="category category-sports">Sports</div>
+          <h1>Some Sports Article</h1>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam quos perspiciatis soluta recusandae
+            officiis, provident itaque dolor quas nam delectus qui adipisci quibusdam molestias sed consequuntur dolorum
+            ducimus enim et?</p>
+          <a href="article.html" class="btn btn-primary">Read More</a>
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <!-- Home Articles -->
+  <section id="home-articles" class="py-2">
+    <div class="container">
+      <h2>Editors Picks</h2>
+      <div class="articles-container">
+
+        <article class="card">
+          <img src="img/articles/ent1.jpg" alt="">
+          <div>
+            <div class="category category-ent">Entertainment</div>
+            <h3>
+              <a href="article.html">Lorem ipsum dolor sit amet.</a>
+            </h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore quaerat quis minima dolor, sint
+              aliquid
+              in magnam ut? Excepturi, eos?</p>
+          </div>
+        </article>
+
+        <article class="card bg-dark">
+          <div class="category category-sports">Sports</div>
+          <h3><a href="article.html">Lorem ipsum dolor sit amet.</a></h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore quaerat quis minima dolor, sint
+            aliquid
+            in magnam ut? Excepturi, eos?</p>
+        </article>
+
+        <article class="card">
+          <img src="img/articles/tech1.jpg" alt="">
+          <div class="category category-tech">Technology</div>
+          <h3><a href="article.html">Lorem ipsum dolor sit amet.</a></h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore quaerat quis minima dolor, sint
+            aliquid
+            in magnam ut? Excepturi, eos?</p>
+        </article>
+
+        <article class="card">
+          <div class="category category-sports">Sports</div>
+          <h3><a href="article.html">Lorem ipsum dolor sit amet.</a></h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore quaerat quis minima dolor, sint
+            aliquid
+            in magnam ut? Excepturi, eos?</p>
+          <img src="img/articles/sports1.jpg" alt="">
+        </article>
+
+        <article class="card">
+          <img src="img/articles/tech2.jpg" alt="">
+          <div class="category category-tech">Technology</div>
+          <h3><a href="article.html">Lorem ipsum dolor sit amet.</a></h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore quaerat quis minima dolor, sint
+            aliquid
+            in magnam ut? Excepturi, eos?</p>
+        </article>
+
+        <article class="card bg-primary">
+          <div class="category category-sports">Sports</div>
+          <h3><a href="article.html">Lorem ipsum dolor sit amet.</a></h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore quaerat quis minima dolor, sint
+            aliquid
+            in magnam ut? Excepturi, eos?</p>
+        </article>
+
+        <article class="card">
+          <div>
+            <div class="category category-ent">Entertainment</div>
+            <h3>
+              <a href="article.html">Lorem ipsum dolor sit amet.</a>
+            </h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore quaerat quis minima dolor, sint
+              aliquid
+              in magnam ut? Excepturi, eos?</p>
+          </div>
+          <img src="img/articles/ent2.jpg" alt="">
+        </article>
+
+      </div>
+    </div>
+
+  </section>
 
 </body>
 
