--- a/News_Grid/index.html
+++ b/News_Grid/index.html
@@ -123,11 +123,53 @@
           </div>
           <img src="img/articles/ent2.jpg" alt="">
         </article>
-
       </div>
     </div>
-
   </section>
+
+  <!-- Footer -->
+  <footer id="main-footer" class="py-2">
+    <div class="container footer-container">
+
+      <div>
+        <img src="img/logo_light.png" alt="NewsGrid">
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis magni repellendus eos est tempore cupiditate
+          obcaecati laboriosam totam cumque in!</p>
+      </div>
+
+      <div>
+        <h3>Email Newsletter</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <form>
+          <input type="email" placeholder="Enter Email...">
+          <input type="submit" value="Subscribe" class="btn btn-primary">
+        </form>
+      </div>
+
+      <div>
+        <h3>Site Links</h3>
+        <ul class="list">
+          <li><a href="#">Help & Support</a></li>
+          <li><a href="#">Privacy Policy</a></li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+
+      <div>
+        <h2>Join Our Club</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, cumque.</p>
+        <a href="#" class="btn btn-secondary">Join Now</a>
+      </div>
+
+      <div>
+        <p>
+          Copyright &copy; 2019, all Right Reserved
+        </p>
+      </div>
+
+    </div>
+  </footer>
 
 </body>
 
