--- a/News_Grid/about.html
+++ b/News_Grid/about.html
@@ -10,7 +10,7 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Staatliches&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="CSS/style.css">
-  <link rel="stylesheet" media="screen nad (max-width 768px)" href="CSS/mobile.css">
+  <link rel="stylesheet" media="screen and (max-width: 768px)" href="CSS/mobile.css">
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   <title>About</title>
 </head>
